<resources>
    <string name="app_name" translatable="false">CARDINAL GATE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_username">Username</string>
    <string name="action_login">Login</string>
    <string name="psych_out_text">You\'ve stepped upon a plank where your mind is the key. There are pirates who will lend you guidance; the Internet is yours to conquer alone. Tapping here will take more than mere logic and Google strategy, but the criteria are just as hidden as what they reveal. Find yourself, and you will find the very thing hidden on this server. Beyond here is something like an island — beyond here is a pretty cool eamuse server.</string>
    <string name="image_description_cg_logo">CG logo</string>
    <string name="game_iidx" translatable="false">beatmania IIDX</string>
    <string name="game_sdvx" translatable="false">SOUND VOLTEX</string>
    <string name="game_popn" translatable="false">pop\'n music</string>
    <string name="game_ddr" translatable="false">DanceDanceRevolution</string>
    <string name="game_jubeat" translatable="false">jubeat</string>
    <string name="game_rb" translatable="false">REFLEC BEAT</string>
    <string name="game_msc" translatable="false">MÚSECA</string>
    <string name="game_bs" translatable="false">BeatStream</string>
    <string name="game_nst" translatable="false">ノスタルジア</string>
    <string name="game_gd" translatable="false">GITADORA</string>
    <string name="label_game">Game</string>
    <string name="label_play_count">Play Count</string>
    <string name="label_estimated_total_play_time">Estimated play time</string>
    <string name="menu_title_general">General</string>
    <string name="menu_title_iidx_rivals">Rivals</string>
    <string name="menu_logout">Logout</string>
    <string name="iidx_play_style_sp" translatable="false">SP</string>
    <string name="iidx_play_style_dp" translatable="false">DP</string>
    <string name="label_iidx_rivals">beatmania IIDX Rivals</string>
    <string name="button_add_sp_rival">Add SP Rival</string>
    <string name="button_add_dp_rival">Add DP Rival</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_add">Add</string>
    <string name="menu_cards">Cards</string>
    <string name="label_songs_played">songs played</string>
    <string name="label_network_error">Network error</string>
    <string name="button_retry">Retry</string>
    <string name="label_no_plays">No plays found</string>
    <string name="clock_icon">Clock icon</string>
    <string name="gm" translatable="false">gm</string>
    <string name="mascot">Mascot</string>
    <string name="series_image">Series image</string>
    <string name="no_cards_found">No cards found</string>
    <string name="add_card">Add card</string>
    <string name="add_card_instruction">Input the card number you want to add, you can use either the card ID or display ID (user code). You can also scan a physical card using NFC.</string>
    <string name="card_id">Card number</string>
    <string name="nfc_is_disabled">NFC is disabled!</string>
    <string name="add_card_dialog_add">Add</string>
    <string name="add_card_dialog_cancel">Cancel</string>
    <string name="felica_emulation_service_desc">Felica emulation service</string>
    <string name="nav_stats">Statistics</string>
    <string name="clear_types">Clear Types</string>
    <string name="grades">Grades</string>
</resources>