<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/menu_title_general">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:checked="true"
                    android:icon="@drawable/baseline_home_24"
                    android:title="@string/menu_home" />
                <item
                    android:icon="@drawable/logout"
                    android:title="@string/menu_logout" />
            </group>
        </menu>
    </item>

    <item android:title="@string/game_iidx">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/swords"
                    android:title="@string/menu_title_iidx_rivals" />
            </group>
        </menu>
    </item>
</menu>