<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cardinalgate.ui.fragment.HomeFragment"
        android:label="@string/menu_home"></fragment>

    <activity
        android:id="@+id/nav_logout"
        android:name="com.example.cardinalgate.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
    <fragment
        android:id="@+id/nav_iidx_rivals"
        android:name="com.example.cardinalgate.ui.fragment.IIDXRivalsFragment"
        android:label="@string/label_iidx_rivals"
        tools:layout="@layout/fragment_i_i_d_x_rivals" />
    <fragment
        android:id="@+id/nav_cards"
        android:name="com.example.cardinalgate.ui.fragment.CardsFragment"
        android:label="@string/menu_cards"
        tools:layout="@layout/fragment_cards" />
    <fragment
        android:id="@+id/nav_sdvx_stats"
        android:name="com.example.cardinalgate.ui.fragment.SDVXStatsFragment"
        android:label="SOUND VOLTEX Statistics"
        tools:layout="@layout/fragment_s_d_v_x_stats" />
</navigation>